--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
                     Profesional convencido de un esfuerzo responsable, bien enfocado, con un sentido de la curiosidad que, de la mano de las habilidades de ingeniería, me permite transformar problemas complejos en soluciones eficientes, aplicando las metodologías más óptimas en la resolución de requerimientos que cumplan con los objetivos del negocio.
                 </p>
                 <div class="btn-con">
-                    <a id="file" href="/client/img/CVEN.pdf" download class="main-btn">
+                    <a id="file" href="https://firebasestorage.googleapis.com/v0/b/admin-gregory-shop.appspot.com/o/personal%2FCVEN.pdf?alt=media&token=50ca811d-1c2b-4e1b-a6ac-14a4ea2f13e8"  target="_blank" class="main-btn">
                         <span class="btn-text">Descargar CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -341,7 +341,7 @@
                         <img src="img/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>CRUD PRODUCTS</h3>
+                        <h3>CRUD PRODUCTS <i class="fab fa-react"></i></h3>
                         <div class="icons">
                             <a href="https://github.com/FernandoLeonett/admin-products-react" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
@@ -357,7 +357,7 @@
                         <img src="img/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Ecommerce</h3>
+                        <h3>Ecommerce - Next Js</h3>
                         <div class="icons">
                             <a href="https://github.com/FernandoLeonett/simpleshop" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
@@ -373,7 +373,7 @@
                         <img src="img/port3.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>RESERVA PARKING</h3>
+                        <h3>RESERVA PARKING <i class="fab fa-android"></i></h3>
                         <div class="icons">
                             <a href="https://github.com/FernandoLeonett/AndrodidBootCampFer" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
@@ -386,7 +386,7 @@
                         <img src="img/port4.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Full Project C#</h3>
+                        <h3>Full Project - C#</h3>
                         <div class="icons">
                             <a href="https://github.com/FernandoLeonett/Obligatorio2P3" target="_blank" class="icon">
                                 <i class="fab fa-github"></i>
