--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
                     Profesional convencido de un esfuerzo responsable, bien enfocado, con un sentido de la curiosidad que, de la mano de las habilidades de ingeniería, me permite transformar problemas complejos en soluciones eficientes, aplicando las metodologías más óptimas en la resolución de requerimientos que cumplan con los objetivos del negocio.
                 </p>
                 <div class="btn-con">
-                    <a id="file" href="https://firebasestorage.googleapis.com/v0/b/admin-gregory-shop.appspot.com/o/personal%2FCVEN.pdf?alt=media&token=7b046da1-aeb5-4899-b51f-bbad9467aa7d"  target="_blank" class="main-btn">
+                    <a id="file" href="https://firebasestorage.googleapis.com/v0/b/admin-gregory-shop.appspot.com/o/personal%2FCVEN.pdf.pdf?alt=media&token=615ce172-6a97-4927-94b8-2c872c6300f3"  target="_blank" class="main-btn">
                         <span class="btn-text">Descargar CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
