--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="btn-con">
                     <a id="file" href="https://firebasestorage.googleapis.com/v0/b/admin-gregory-shop.appspot.com/o/personal%2FCVEN.pdf?alt=media&token=50ca811d-1c2b-4e1b-a6ac-14a4ea2f13e8"  target="_blank" class="main-btn">
-                        <span class="btn-text">DownLoad EN</span>
+                        <span class="btn-text">DownLoad CV EN</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
