--- a/client/index.html
+++ b/client/index.html
@@ -31,17 +31,17 @@
                 </p>
               
                 <div class="btn-con">
-                    <a id="file" href="https://firebasestorage.googleapis.com/v0/b/admin-gregory-shop.appspot.com/o/personal%2FCVEN.pdf?alt=media&token=50ca811d-1c2b-4e1b-a6ac-14a4ea2f13e8"  target="_blank" class="main-btn">
-                        <span class="btn-text">Descargar CV ES</span>
+                    <a id="file" href="https://firebasestorage.googleapis.com/v0/b/admin-gregory-shop.appspot.com/o/personal%2Fcv2023.pdf?alt=media&token=2d42ad0f-446b-4b2d-ac83-db5b201b5420"  target="_blank" class="main-btn">
+                        <span class="btn-text">Descargar CV </span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
-                <div class="btn-con">
+                <!-- <div class="btn-con">
                     <a id="file" href="https://firebasestorage.googleapis.com/v0/b/admin-gregory-shop.appspot.com/o/personal%2FCVEN.pdf?alt=media&token=50ca811d-1c2b-4e1b-a6ac-14a4ea2f13e8"  target="_blank" class="main-btn">
                         <span class="btn-text">DownLoad CV EN</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </header>
